# ubitool

./: README.md  config.yaml  description.rst  pyproject.toml
test_data/: htail_test.txt  large_log.txt  log_file.txt  names.txt  numbers.txt  settings.test.json  single_line.txt  test_jmes.json  test_jmes2.json  test_json5.json  test_script.sh  test_write.json  test_write2.json
ubitool/: __init__.py  main.py
ubitool.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ubitool/commands/: __init__.py  configsel_cmd.py  htail_cmd.py  json_cmd.py  libmgr_cmd.py  lmgr_cmd.py  ls_cmd.py  shell_cmd.py  shtail_cmd.py  sort_cmd.py  ssend_cmd.py  stshell_cmd.py  stssend_cmd.py  tail_cmd.py  utils.py
