[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ubitool"
version = "1.0.0"
description = "A toolbox for ubinos development"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "ubinos team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "typer>=0.9.0",
    "ipdb>=0.13.0",
    "jmespath>=1.0.0",
    "json5>=0.9.0",
]

[project.urls]
Homepage = "https://github.com/ubinos/ubinos"
Repository = "https://github.com/ubinos/ubinos"

[project.scripts]
ubitool = "ubitool:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["ubitool*"]

[tool.setuptools.package-data]
ubitool = ["test_data/**/*"]